--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/icon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Portfólio | Desenvolvedor Web | Julio Cesar">
-
   <title>Portfólio</title>
 </head>
 
